<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EpiAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="email_or_password_empty">Les deux champs sont obligatoires !</string>
    <string name="error_login">Login ou mot de passe incorrect !</string>
    <string name="enter_token">Token</string>
    <string name="validate_button">Valider</string>
    <string name="log_label">Votre temps de log est de :</string>
    <string name="welcome_label">Bonjour</string>
    <string name="latestMsg_label">Derniers messages</string>
    <string name="log_alert">Vos alertes :</string>
    <string name="label_alert">Vos alertes :</string>
    <string name="txt_alerte">Vous n\'avez aucune alerte.</string>
    <string name="previous_grade">Note précédente</string>
    <string name="next_grade">Note suivante</string>
    <string name="commentLabel">Commentaire :</string>
    <string name="next_grade_msg">Vous n\'avez pas d\'autre note</string>
    <string name="previous_planning"></string>
    <string name="next_planning"></string>
    <string name="previous_week">Semaine préc.</string>
    <string name="next_week">Semaine suiv.</string>
    <string name="enter_login">Enter your Login</string>
    <string name="enter_password">Enter Password (Unix)</string>
    <string name="next_token_msg">Pas d\'autre évènement</string>
    <string name="no_token_msg">Vous n\'avez pas de token à valider.</string>
    <string name="previous_token">Event préc.</string>
    <string name="next_event">Event suiv.</string>
    <string-array name="menu_array">
        <item>Home</item>
        <item>Planning</item>
        <item>Token</item>
        <item>Grades</item>
        <item>Modules</item>
        <item>Projects</item>
    </string-array>
    <color name="black">#000000</color>

</resources>
