<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff2c2c2c"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        android:textColor="#ffa0ba5f"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/login_title"
            android:textSize="25sp"
            android:textColor="#ffa0ba5f"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_login"
            android:textColorHint="#fff"
            android:textColor="#ffa0ba5f"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:textColor="#ffa0ba5f"
            android:text="@string/pwd" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="#fff"
            android:textColor="#ffa0ba5f"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ffe6a54d"
            android:onClick="loginUser"
            android:text="Login"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>

